# epanet-rs

./: .git-blame-ignore-revs  .gitignore  BIN_LPS_HW.inp  Cargo.toml  FIVERES_LPS_HW.inp  HAN_CMH_HW.inp  LICENSE  NET4_LPS_HW.inp  README.md  TODO  TODO.md  ThreeR_LPS_HW.inp  benchmarks.md  justfile  pyproject.toml
.github/: validate-ignore.list
.github/workflows/: benchmark.yml  release.yml  rust.yml  validate.yml
benchmarks/: benchmark.inp
examples/: python_poc.py
networks/: FIVERES_LPS_HW.inp  MOD_LPS_HW.inp  cv.inp  grid4.inp  luke.inp  luke2.inp  luke3.inp  psv-fail.inp  psv.inp  pump-closed.inp  pump.inp  pump3-1.inp  tanks.inp  valves.inp  valves.rpt  valves1.inp
python/epanet_rs/: __init__.py
src/: constants.rs  error.rs  input.rs  lib.rs  main.rs  network.rs  output.rs  simulation.rs  solver-working.bup  solver.rs
src/ffi/: analysis_options.rs  curves.rs  enums.rs  error_codes.rs  hydraulic_solver.rs  links.rs  mod.rs  nodes.rs  patterns.rs  project.rs  quality_solver.rs  report.rs
src/io/: inp.rs  input.rs  mod.rs  output.rs
src/model/: control.rs  curve.rs  demand.rs  junction.rs  link.rs  mod.rs  network.rs  node.rs  options.rs  pattern.rs  pipe.rs  pump.rs  reservoir.rs  rule.rs  tank.rs  units.rs  valve.rs
src/python/: mod.rs
src/solver/: assembly.rs  hydraulicsolver.rs  matrix.rs  mod.rs  result.rs  (+3 more)
tests/: 2tanks-controls.inp  2tanks.inp  controls.inp  emitter-lpm.inp  emitter.inp  ffi_api_comprehensive_test.rs  ffi_compatibility_test.rs  modification_test.rs  pcv-si.inp  pda-prv.inp  pda.inp  pda.rpt  pump-cv.inp  pump15.inp  solver_test.rs  tankmodel.inp
(+6 files in other folders)
