[package]
name = "epanet-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = { version = "0.23.2", features = ["linalg"] }
hashbrown = "0.16"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"

clap = { version = "4.5.54", features = ["derive"] }


[profile.release]
debug = "line-tables-only"
opt-level = 3
lto = "fat"
codegen-units = 1