[package]
name = "epanet-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = { version = "0.23.2", features = ["linalg", "perf-warn"] }
hashbrown = { version = "0.16", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
clap = { version = "4.5.54", features = ["derive"] }
fastapprox = "0.3.1"
log = "0.4"
simplelog = { version = "0.12.2", features = ["paris"] }

[profile.release]
debug = "line-tables-only"
opt-level = 3
lto = true
codegen-units = 1
