[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "epanet-rs"
version = "0.2.2"
description = "Python bindings for the epanet-rs hydraulic solver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Abel Heinsbroek" }]
dependencies = [
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.8,<2.0",
]

[tool.maturin]
features = ["python"]
module-name = "epanet_rs._core"
python-source = "python"
